// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: File should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "paddingTop": 16,
    }
  }
>
  <View
    contentContainerStyle={
      [
        {
          "paddingTop": 8,
        },
        {
          "paddingBottom": undefined,
        },
      ]
    }
    keyboardShouldPersistTaps="handled"
    showsVerticalScrollIndicator={false}
    style={
      {
        "flex": 1,
        "paddingHorizontal": 24,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 16,
            "textAlign": "left",
          },
          {
            "color": "#2F343D",
          },
        ]
      }
    >
      requirements.pdf
    </Text>
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "height": 240,
            "justifyContent": "center",
            "marginBottom": 24,
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#E4E7EA",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 4,
              "height": 240,
              "justifyContent": "center",
              "marginBottom": 24,
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#E4E7EA",
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#1D74F5",
                "fontSize": 40,
              },
              [
                {
                  "lineHeight": 40,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <RNGestureHandlerButton
      accessibilityLabel="Save"
      accessibilityRole="button"
      activeOpacity={0.105}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      style={
        [
          {
            "backgroundColor": "#156FF5",
            "borderRadius": 4,
            "justifyContent": "center",
            "marginBottom": 0,
            "paddingHorizontal": 16,
            "paddingVertical": 14,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      underlayColor="black"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "black",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 4,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Save
      </Text>
    </RNGestureHandlerButton>
  </View>
</View>
`;

exports[`Story Snapshots: Image should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "paddingTop": 16,
    }
  }
>
  <View
    contentContainerStyle={
      [
        {
          "paddingTop": 8,
        },
        {
          "paddingBottom": undefined,
        },
      ]
    }
    keyboardShouldPersistTaps="handled"
    showsVerticalScrollIndicator={false}
    style={
      {
        "flex": 1,
        "paddingHorizontal": 24,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 16,
            "textAlign": "left",
          },
          {
            "color": "#2F343D",
          },
        ]
      }
    >
      sunset.jpg
    </Text>
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "height": 240,
            "justifyContent": "center",
            "marginBottom": 24,
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#E4E7EA",
          },
        ]
      }
    >
      <Image
        resizeMode="cover"
        source={
          {
            "uri": "https://open.rocket.chat/images/logo/logo.png",
          }
        }
        style={
          {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </View>
    <RNGestureHandlerButton
      accessibilityLabel="Save"
      accessibilityRole="button"
      activeOpacity={0.105}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      style={
        [
          {
            "backgroundColor": "#156FF5",
            "borderRadius": 4,
            "justifyContent": "center",
            "marginBottom": 0,
            "paddingHorizontal": 16,
            "paddingVertical": 14,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      underlayColor="black"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "black",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 4,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Save
      </Text>
    </RNGestureHandlerButton>
  </View>
</View>
`;

exports[`Story Snapshots: ImageOnLegacyServer should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "paddingTop": 16,
    }
  }
>
  <View
    contentContainerStyle={
      [
        {
          "paddingTop": 8,
        },
        {
          "paddingBottom": undefined,
        },
      ]
    }
    keyboardShouldPersistTaps="handled"
    showsVerticalScrollIndicator={false}
    style={
      {
        "flex": 1,
        "paddingHorizontal": 24,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 16,
            "textAlign": "left",
          },
          {
            "color": "#2F343D",
          },
        ]
      }
    >
      sunset.jpg
    </Text>
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "height": 240,
            "justifyContent": "center",
            "marginBottom": 24,
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#E4E7EA",
          },
        ]
      }
    >
      <Image
        resizeMode="cover"
        source={
          {
            "uri": "https://open.rocket.chat/images/logo/logo.png",
          }
        }
        style={
          {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </View>
    <RNGestureHandlerButton
      accessibilityLabel="Save"
      accessibilityRole="button"
      activeOpacity={0.105}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      style={
        [
          {
            "backgroundColor": "#156FF5",
            "borderRadius": 4,
            "justifyContent": "center",
            "marginBottom": 0,
            "paddingHorizontal": 16,
            "paddingVertical": 14,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      underlayColor="black"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "black",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 4,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Save
      </Text>
    </RNGestureHandlerButton>
  </View>
</View>
`;

exports[`Story Snapshots: ImageWithPrefilledAltText should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "paddingTop": 16,
    }
  }
>
  <View
    contentContainerStyle={
      [
        {
          "paddingTop": 8,
        },
        {
          "paddingBottom": undefined,
        },
      ]
    }
    keyboardShouldPersistTaps="handled"
    showsVerticalScrollIndicator={false}
    style={
      {
        "flex": 1,
        "paddingHorizontal": 24,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 16,
            "textAlign": "left",
          },
          {
            "color": "#2F343D",
          },
        ]
      }
    >
      sunset.jpg
    </Text>
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "height": 240,
            "justifyContent": "center",
            "marginBottom": 24,
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#E4E7EA",
          },
        ]
      }
    >
      <Image
        resizeMode="cover"
        source={
          {
            "uri": "https://open.rocket.chat/images/logo/logo.png",
          }
        }
        style={
          {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </View>
    <RNGestureHandlerButton
      accessibilityLabel="Save"
      accessibilityRole="button"
      activeOpacity={0.105}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      style={
        [
          {
            "backgroundColor": "#156FF5",
            "borderRadius": 4,
            "justifyContent": "center",
            "marginBottom": 0,
            "paddingHorizontal": 16,
            "paddingVertical": 14,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      underlayColor="black"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "black",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 4,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Save
      </Text>
    </RNGestureHandlerButton>
  </View>
</View>
`;

exports[`Story Snapshots: Video should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "paddingTop": 16,
    }
  }
>
  <View
    contentContainerStyle={
      [
        {
          "paddingTop": 8,
        },
        {
          "paddingBottom": undefined,
        },
      ]
    }
    keyboardShouldPersistTaps="handled"
    showsVerticalScrollIndicator={false}
    style={
      {
        "flex": 1,
        "paddingHorizontal": 24,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 16,
            "textAlign": "left",
          },
          {
            "color": "#2F343D",
          },
        ]
      }
    >
      walkthrough.mp4
    </Text>
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "height": 240,
            "justifyContent": "center",
            "marginBottom": 24,
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#E4E7EA",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 4,
              "height": 240,
              "justifyContent": "center",
              "marginBottom": 24,
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#E4E7EA",
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#1D74F5",
                "fontSize": 40,
              },
              [
                {
                  "lineHeight": 40,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <RNGestureHandlerButton
      accessibilityLabel="Save"
      accessibilityRole="button"
      activeOpacity={0.105}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      style={
        [
          {
            "backgroundColor": "#156FF5",
            "borderRadius": 4,
            "justifyContent": "center",
            "marginBottom": 0,
            "paddingHorizontal": 16,
            "paddingVertical": 14,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      underlayColor="black"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "black",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 4,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Save
      </Text>
    </RNGestureHandlerButton>
  </View>
</View>
`;
